@startuml

class PersInf {
    -id: int
    -Surname: String
    -Name: String
    -phoneNumber: String
    -email: String

}

class ProfInf {
    -skills: List<Skill>
    -persDescription: String
    -exp: int

}

class Skill {
    -name: String
    -skillDescription: String
    -cost: Double

}

PersInf <-- ProfInf
ProfInf <-- Skill

@enduml
